web_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: arba
  name: jobvacancy
  labels:
    app: jobvacancy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobvacancy
  template:
    metadata:
      labels:
        app: jobvacancy
    spec:
      containers:
      - name: webapp
        image: nicopaez/jobvacancy-ruby:1.0.5
