web_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: arba
  name: jobvacancy-service
  labels:
    app: jobvacancy
spec:
  selector:
   app: jobvacancy
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
