web_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: arba
  name: jobvacancy-ingress
  labels:
    app: jobvacancy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /jobvacancy
        pathType: Prefix
        backend:
          service:
            name: jobvacancy-service
            port:
              number: 3000
